--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -1,3 +1,35 @@
+body {
+  padding: 0;
+  margin: 0; }
 
+body {
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 14px;
+  min-width: 980px;
+  font-family: 'Microsoft Yahei', Arial, STHeiti, sans-serif; }
+
+ul, dl, ol {
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
+.block-top-func-line {
+  height: 45px;
+  line-height: 44px;
+  border-bottom: 1px solid #e5e5e5;
+  background: #f5f5f5; }
+  .block-top-func-line .logo {
+    display: inline-block;
+    font-weight: bold;
+    padding: 0 10px;
+    height: 44px;
+    line-height: 44px; }
+    .block-top-func-line .logo a {
+      color: #333; }
 
 /*# sourceMappingURL=frame.css.map */
