--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -1,6 +1,7 @@
 body {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+}
 
 body {
   -webkit-box-sizing: border-box;
@@ -10,26 +11,33 @@ body {
   box-sizing: border-box;
   font-size: 14px;
   min-width: 980px;
-  font-family: 'Microsoft Yahei', Arial, STHeiti, sans-serif; }
+  font-family: 'Microsoft Yahei', Arial, STHeiti, sans-serif;
+  background: #fff;
+}
 
 ul, dl, ol {
-  list-style: none; }
+  list-style: none;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 .block-top-func-line {
   height: 45px;
   line-height: 44px;
   border-bottom: 1px solid #e5e5e5;
-  background: #f5f5f5; }
-  .block-top-func-line .logo {
-    display: inline-block;
-    font-weight: bold;
-    padding: 0 10px;
-    height: 44px;
-    line-height: 44px; }
-    .block-top-func-line .logo a {
-      color: #333; }
+  background: #f5f5f5;
+}
+.block-top-func-line .logo {
+  display: inline-block;
+  font-weight: bold;
+  padding: 0 10px;
+  height: 44px;
+  line-height: 44px;
+}
+.block-top-func-line .logo a {
+  color: #333;
+}
 
 /*# sourceMappingURL=frame.css.map */
