--- a/public/css/scss/frame.scss
+++ b/public/css/scss/frame.scss
@@ -10,6 +10,7 @@ body{
  font-size:14px;
  min-width:980px;
  font-family: 'Microsoft Yahei', Arial, STHeiti, sans-serif;
+ background: #fff;
 }
 
 ul,dl,ol{
@@ -18,6 +19,7 @@ ul,dl,ol{
 
 a{
  text-decoration: none;
+
 }
 
 .block-top-func-line{
