--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -35,9 +35,13 @@ a {
   padding: 0 10px;
   height: 44px;
   line-height: 44px;
+  float: left;
 }
 .block-top-func-line .logo a {
   color: #333;
+}
+.block-top-func-line .site-intro {
+  float: left;
 }
 
 /*# sourceMappingURL=frame.css.map */
