--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -5,9 +5,7 @@ body {
 
 body {
   -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  -o-box-sizing: border-box;
   box-sizing: border-box;
   font-size: 14px;
   min-width: 980px;
@@ -21,6 +19,14 @@ ul, dl, ol {
 
 a {
   text-decoration: none;
+}
+
+input, textarea {
+  outline: none;
+}
+
+.btn {
+  cursor: pointer;
 }
 
 .block-top-func-line {
@@ -42,6 +48,26 @@ a {
 }
 .block-top-func-line .site-intro {
   float: left;
+}
+.block-top-func-line .search-input-box {
+  float: left;
+}
+.block-top-func-line .search-input-box .btn-search {
+  display: inline-block;
+  width: 26px;
+  color: red;
+  height: 26px;
+  line-height: 26px;
+}
+.block-top-func-line .search-input-box .search-select {
+  float: left;
+}
+.block-top-func-line .search-input-box input {
+  height: 26px;
+  line-height: 26px;
+  padding: 0 5px;
+  width: 230px;
+  font-size: 14px;
 }
 
 /*# sourceMappingURL=frame.css.map */
