--- a/public/css/scss/frame.scss
+++ b/public/css/scss/frame.scss
@@ -1,32 +1,29 @@
-@import "base";
+@import "./core/base";
+@import "./core/reset";
+@import "./core/config";
 
 body{
- padding:0;
- margin: 0;
-}
-
-body{
- @include boxSizing(border-box);
  font-size:14px;
- min-width:980px;
+ min-width:1200px;
  font-family: 'Microsoft Yahei', Arial, STHeiti, sans-serif;
  background: #fff;
 }
 
-ul,dl,ol{
- list-style: none;
-}
-
 a{
+ color:$themeColor;
  text-decoration: none;
-}
-
-input,textarea{
- outline: none;
+ &:hover{
+  text-decoration: underline;
+ }
 }
 
 .btn {
+ display: inline-block;
  cursor:pointer;
+}
+
+.icon{
+ display: inline-block;
 }
 
 .block-top-func-line{
