--- a/views/article/index.ejs
+++ b/views/article/index.ejs
@@ -91,10 +91,11 @@
     </div>
   </section>
 </div>
+<div><%= data %></div>
 
 
 <script type="text/javascript">
-  var requiredModuleList = ['index'];
+  // var requiredModuleList = ['article'];
 </script>
 <script type="text/javascript" src="/js/lib/require-2.2.0.min.js"></script>
 <script type="text/javascript" src="/js/app/common/require-config.js"></script>
