--- a/public/css/frame.css
+++ b/public/css/frame.css
@@ -1,3 +1,9 @@
+.test-folded-corner {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 body, div, ul, dl, ol, dt, dd, li, p, a, label, span, i, img, input, textarea, header, footer, article, section, nav, aside, figure, h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
@@ -83,7 +89,6 @@ a:hover {
 .test-folded-corner {
   width: 200px;
   height: 100px;
-  background: #58a;
   position: relative;
   background: #58a;
   background: linear-gradient(-140deg, transparent 2em, #58a 0);
