--- a/public/css/scss/frame.scss
+++ b/public/css/scss/frame.scss
@@ -68,6 +68,6 @@ a{
 .test-folded-corner{
  width: 200px;
  height: 100px;
- background:#58a;
  @include folded-corner(#58a, 2em, 40deg);
+ @extend  %textOverflowEllipsis;
 }
